nav section added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
+    <title>Assignment2</title>
 </head>
 <body>
+    <header>
+<!-- navbar section start -->
+
+            <nav>
+                <div class="nav-section">
+
+                    <div class="logo">
+                        <img src="images/Frame.png" alt="">
+                        <p><span class="span-g">G</span>amer</p>
+                    </div>
+
+                    <ul>
+                        <a href="">About Us</a>
+                        <a href="">Developers</a>
+                        <div class="follow-a">
+                            <p>Follow Us On</p>
+                            <a href="https://www.youtube.com/@Xafuzur"><img src="images/icon/Vector.png" alt=""></a>
+                            <a href="https://www.tiktok.com/@xafuzur_ff"><img src="images/icon/tik-tok 1.png" alt=""></a>
+                        </div>
+                    </ul>
+                </div>
+            </nav>
+
+
+
+<!-- navbar section end -->
+    </header>
     
 </body>
 </html>
