banner section added

--- a/index.html
+++ b/index.html
@@ -31,9 +31,37 @@
                 </div>
             </nav>
 
-
-
 <!-- navbar section end -->
+            <section class="home-banner">
+                <div class="container">
+                    <div class="banner-section">
+
+                        <div class="banner-heading">
+                            <div class="banner-small-chenter">
+                                    <p>Play Like The</p>
+                                    <h1>G.O.A.T.</h1>
+                                    <div class="banner-text">
+                                        <p><img src="images/icon/Frame.png" alt="">1-Click instant play</p>
+                                        <p><img src="images/icon/Frame (1).png" alt="">No Download</p>
+                                        <p><img src="images/icon/Frame (2).png" alt="">1000s of supported online games</p>
+                                    </div>
+                                    <div class="btn-container">
+                                        <button class="btn-primary pink1">Sign In</button>
+                                        <button class="btn-primary blue2">Go Rogue</button>
+                                    </div>
+                            </div>
+                        </div>
+
+                        <div class="banner-img">
+                            <img src="images/Group 18.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            </header>
+<!--01 header section end  -->
+
+
     </header>
     
 </body>
