online gaming section added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="nav-section">
 
                     <div class="logo">
-                        <img src="images/Frame.png" alt="">
+                        <img src="images/Frame.png" alt="gaming logo">
                         <p><span class="span-g">G</span>amer</p>
                     </div>
 
@@ -24,8 +24,8 @@
                         <a href="">Developers</a>
                         <div class="follow-a">
                             <p>Follow Us On</p>
-                            <a href="https://www.youtube.com/@Xafuzur"><img src="images/icon/Vector.png" alt=""></a>
-                            <a href="https://www.tiktok.com/@xafuzur_ff"><img src="images/icon/tik-tok 1.png" alt=""></a>
+                            <a href="https://www.youtube.com/@Xafuzur"><img src="images/icon/Vector.png" alt="Youtube icon"></a>
+                            <a href="https://www.tiktok.com/@xafuzur_ff"><img src="images/icon/tik-tok 1.png" alt="Tik tok icon"></a>
                         </div>
                     </ul>
                 </div>
@@ -53,16 +53,50 @@
                         </div>
 
                         <div class="banner-img">
-                            <img src="images/Group 18.png" alt="">
+                            <img src="images/Group 18.png" alt="this is banner image">
                         </div>
                     </div>
                 </div>
             </section>
             </header>
 <!--01 header section end  -->
+<!-- main start -->
+<main>
+    <!-- Online Games section start-->
+    <section>
+        <div class="online-games-atart">
+        <div class="container">
+             <div class="online-games-section">
+                  <div class="online-game-title">
+                       <h2>Online Games <span>Funny Videos</span></h2>
+                       <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+                  </div>
 
+                  <div class="online-game-images">
+                       <div class="game-card-img">
+                            <img src="images/Rectangle 4.png" alt="">
+                            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                       </div>
+                       <div class="game-card-img">
+                            <img src="images/Rectangle 5.png" alt="">
+                            <p>Did you score? #unblockedgames #school</p>
+                       </div>
+                       <div class="game-card-img">
+                            <img src="images/Rectangle 7.png" alt="">
+                            <p>Breaking game records like OG</p>
+                       </div>
+                       <div class="game-card-img">
+                            <img src="images/Rectangle 6.png" alt="">
+                            <p>Busted gaming on school laptop, but you are still lit.</p>
+                       </div>
+                  </div>
+             </div>
+        </div>
+        </div>
+   </section>
+<!--Online Games section end-->
+</main>
 
-    </header>
     
 </body>
 </html>
