gamers-container section added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
 <!--01 header section end  -->
 <!-- main start -->
 <main>
+            <!-- we are gamer section started -->
+            <section class="gamers-container">
+                <div class="gamers-img"><img src="./images/pngwing 4.png" alt=""></div>
+                <div class="gamers-text">
+                    <h2 class="secondary-heading">We are gamer</h2>
+                    <p class="primary-text-small">An international digital games and entertainment company. We develop, publish
+                        and distribute
+                        multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                        growing.</p>
+                    <button class="btn-primary pink1">know more</button>
+                    <p class="gamers-quote-heading">Our purpose...</p>
+                    <h2>“unleash the gamer in everyone”</h2>
+                </div>
+            </section>
+            <!-- we are gamer section ended -->
     <!-- Online Games section start-->
     <section>
         <div class="online-games-atart">
@@ -95,6 +110,7 @@
         </div>
    </section>
 <!--Online Games section end-->
+
 </main>
 
     
