--- a/index.html
+++ b/index.html
@@ -110,6 +110,50 @@
         </div>
    </section>
 <!--Online Games section end-->
+<!--06 suggestion section start -->
+<section>
+    <div class="container">
+         <div class="suggestion-section">
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 11.png" alt="this is a icon of game">
+                   <p>Action Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 12.png" alt="this is a icon of game">
+                   <p>Adventure Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 13.png" alt="this is a icon of game">
+                   <p>Arcade Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 14.png" alt="this is a icon of game">
+                   <p>Arcade Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 15.png" alt="this is a icon of game">
+                   <p>Word Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 16.png" alt="this is a icon of game">
+                   <p>Role Palying Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 17.png" alt="this is a icon of game">
+                   <p>Music & Audio Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 18.png" alt="this is a icon of game">
+                   <p>Puzzle Games</p>
+              </div>
+              <div class="suggestion-child">
+                   <img src="images/Rectangle 19.png" alt="this is a icon of game">
+                   <p>Strategy Games</p>
+              </div>
+         </div>
+    </div>
+</section>
+<!-- suggestion section end -->
 
 </main>
 
