--- a/index.html
+++ b/index.html
@@ -156,6 +156,80 @@
 <!-- suggestion section end -->
 
 </main>
+        <!-- footer section start -->
+<footer>
+    <section>
+         <div class="container">
+              <div class="footer-section">
+
+                   <div class="footer-logo">
+                        <img src="images/Frame.png" alt="">
+                        <p><span>G</span>amer</p>
+                   </div>
+
+
+                   <div class="category">
+                        <div class="catagory-child">
+                             <h4>our story</h4>
+                        </div>
+                        <div class="catagory-child">
+                             <h4>Games</h4>
+                        </div>
+                        <div class="catagory-child">
+                             <h4>careers</h4>
+                        </div>   
+                        <div class="catagory-child">  
+                             <h4>support</h4>
+                        </div>
+                        <div class="catagory-child">
+                             <h4>My Account</h4>
+                        </div>
+                   </div>
+
+                   <div class="socle">
+                        <div class="socile-child">
+                             <i class="fa-brands fa-twitter"></i>
+                        </div>
+                        <div class="socile-child">
+                             <i class="fa-brands fa-facebook"></i>
+                        </div>
+                        <div class="socile-child">
+                             <i class="fa-brands fa-youtube"></i>
+                        </div>
+                        <div class="socile-child">
+                             <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                        <div class="socile-child">
+                             <i class="fa-brands fa-instagram"></i>
+                        </div>
+                        <div class="socile-child">
+                             <i class="fa-brands fa-apple"></i>
+                        </div>
+                   </div>
+
+                   <div class="Privacy-Policy1">
+                        <div class="Privacy-heading">
+                             <p>Terms and Conditions</p>
+                        </div>
+                        <div class="Privacy-heading">
+                             <p>Privacy Policy</p>
+                        </div>
+                        <div class="Privacy-heading">
+                             <p>Cookie Policy</p>
+                        </div>
+                        <div class="Privacy-heading">
+                             <p>Privacy Settings</p>
+                        </div>
+                   </div>
+
+                   <div class="copyright">
+                        <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                   </div>
+              </div>
+         </div>
+    </section>
+</footer>
+<!--footer section end -->
 
     
 </body>
