Social media icons added in footer

--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
 
                    <div class="socle">
                         <div class="socile-child">
-                             <i class="fa-brands fa-twitter"></i>
+                            <img src="images/icon/facebook 1.png" alt="social media icons">
                         </div>
                         <div class="socile-child">
-                             <i class="fa-brands fa-facebook"></i>
+                            <img src="images/icon/twitter 1.png" alt="social media icons">
                         </div>
                         <div class="socile-child">
-                             <i class="fa-brands fa-youtube"></i>
+                            <img src="images/icon/instagram 1.png" alt="social media icons">
                         </div>
                         <div class="socile-child">
-                             <i class="fa-brands fa-linkedin"></i>
+                            <img src="images/icon/linkedin 1.png" alt="social media icons">
                         </div>
                         <div class="socile-child">
-                             <i class="fa-brands fa-instagram"></i>
+                            <img src="images/icon/Vector.png" alt="social media icons">
                         </div>
                         <div class="socile-child">
-                             <i class="fa-brands fa-apple"></i>
+                            <img src="images/icon/apple 1.png" alt="social media icons">
                         </div>
                    </div>
 
