play instanty section added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,28 @@
         </div>
    </section>
 <!--Online Games section end-->
-<!--06 suggestion section start -->
+     <!-- Play Instantly start -->
+     <section>
+        <div class="container">
+             <div class="play-instantly-section">
+
+                  <div class="play-instantly-title">
+                       <h2><span>Play Instantly,</span><br> No Downloads <br> No Installs.</h2>
+                       <p>Experience seamless entertainment with instant access to a vast library of games, movies, and more, without the need for downloads or installations.</p>
+                  </div>
+
+                  <div class="play-instantly-images">
+                            <img src="images/Rectangle 55.png" alt="this is game logo">
+                            <div class="short-images">
+                                 <img src="images/Rectangle 66.png" alt="this is short logo of game">
+                            </div>
+                  </div>
+             </div>
+        </div>
+   </section>
+<!-- Play Instantly end -->
+
+<!-- suggestion section start -->
 <section>
     <div class="container">
          <div class="suggestion-section">
