in nav section fontaweson icon add and icon img remove

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/813063eed3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <title>Assignment2</title>
@@ -24,8 +25,8 @@
                         <a href="">Developers</a>
                         <div class="follow-a">
                             <p>Follow Us On</p>
-                            <a href="https://www.youtube.com/@Xafuzur"><img src="images/icon/Vector.png" alt="Youtube icon"></a>
-                            <a href="https://www.tiktok.com/@xafuzur_ff"><img src="images/icon/tik-tok 1.png" alt="Tik tok icon"></a>
+                            <a href="https://www.youtube.com/@Xafuzur"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="https://www.tiktok.com/@xafuzur_ff"><i class="fa-brands fa-tiktok"></i></i></a>
                         </div>
                     </ul>
                 </div>
