fixed some items

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 </div>
             </section>
             </header>
-<!--01 header section end  -->
+<!-- header section end  -->
 <!-- main start -->
 <main>
-            <!-- we are gamer section started -->
+<!-- we are gamer section started -->
             <section class="gamers-container">
                 <div class="gamers-img"><img src="./images/pngwing 4.png" alt=""></div>
                 <div class="gamers-text">
@@ -77,8 +77,8 @@
                     <h2>“unleash the gamer in everyone”</h2>
                 </div>
             </section>
-            <!-- we are gamer section ended -->
-    <!-- Online Games section start-->
+<!-- we are gamer section ended -->
+<!-- Online Games section start-->
     <section>
         <div class="online-games-atart">
         <div class="container">
@@ -111,7 +111,7 @@
         </div>
    </section>
 <!--Online Games section end-->
-     <!-- Play Instantly start -->
+<!-- Play Instantly start -->
      <section>
         <div class="container">
              <div class="play-instantly-section">
@@ -178,7 +178,7 @@
 <!-- suggestion section end -->
 
 </main>
-        <!-- footer section start -->
+<!-- footer section start -->
 <footer>
     <section>
          <div class="container">
