--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/813063eed3.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
-    <title>Assignment2</title>
+    <title>Gamer Zone</title>
 </head>
 <body>
     <header>
