--- a/index.html
+++ b/index.html
@@ -91,19 +91,43 @@
 
                   <div class="online-game-images">
                        <div class="game-card-img">
-                            <img src="images/Rectangle 4.png" alt="">
+                            <div class="overlay-container">
+                              <img src="images/Rectangle 4.png" alt="">
+                              <div class="overlay">
+                                   <i class="fa-solid fa-play fa-3x"></i>
+                                   <p>Watch Now</p>
+                              </div>
+                            </div>
                             <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                        </div>
                        <div class="game-card-img">
-                            <img src="images/Rectangle 5.png" alt="">
+                         <div class="overlay-container">
+                              <img src="images/Rectangle 5.png" alt="">
+                              <div class="overlay">
+                                   <i class="fa-solid fa-play fa-3x"></i>
+                                   <p>Watch Now</p>
+                              </div>
+                            </div>
                             <p>Did you score? #unblockedgames #school</p>
                        </div>
                        <div class="game-card-img">
-                            <img src="images/Rectangle 7.png" alt="">
+                         <div class="overlay-container">
+                              <img src="images/Rectangle 7.png" alt="">
+                              <div class="overlay">
+                                   <i class="fa-solid fa-play fa-3x"></i>
+                                   <p>Watch Now</p>
+                              </div>
+                            </div>
                             <p>Breaking game records like OG</p>
                        </div>
                        <div class="game-card-img">
-                            <img src="images/Rectangle 6.png" alt="">
+                         <div class="overlay-container">
+                              <img src="images/Rectangle 6.png" alt="">
+                              <div class="overlay">
+                                   <i class="fa-solid fa-play fa-3x"></i>
+                                   <p>Watch Now</p>
+                              </div>
+                            </div>
                             <p>Busted gaming on school laptop, but you are still lit.</p>
                        </div>
                   </div>
