ïmage icon remove and fontawesome icon added

--- a/index.html
+++ b/index.html
@@ -234,23 +234,23 @@
                    </div>
 
                    <div class="socle">
-                        <div class="socile-child">
-                            <img src="images/icon/facebook 1.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-facebook"></i>
                         </div>
-                        <div class="socile-child">
-                            <img src="images/icon/twitter 1.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-twitter"></i>
                         </div>
-                        <div class="socile-child">
-                            <img src="images/icon/instagram 1.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-instagram"></i>
                         </div>
-                        <div class="socile-child">
-                            <img src="images/icon/linkedin 1.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-linkedin"></i>
                         </div>
-                        <div class="socile-child">
-                            <img src="images/icon/Vector.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-youtube"></i>
                         </div>
-                        <div class="socile-child">
-                            <img src="images/icon/apple 1.png" alt="social media icons">
+                        <div class="socle-child">
+                              <i class="fa-brands fa-apple"></i>
                         </div>
                    </div>
 
